# my-templates

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  run.sh
apps/: create_app.py
apps/example/router/: examble_router.py
apps/example/service/: example_service.py
configs/: __init__.py  base_config.py  log.py  mysql_config.py
database/: __init___.py  minio_client.py  mongo_client.py  mysql_client.py
docker/: entrypoint.sh
middlewares/: keyclock.py  token_verify.py
models/: cves_nuclei.py  example_table.py
utils/: base_enum.py  commons.py  exceptions.py  singleton_meta.py
