[project]
name = "xxxx"
version = "0.1.0"
description = "xxx等功能"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "requests>=2.31.0",
    "pydantic>=2.6.0",
    "aiofiles>=24.1.0",
    "pydantic-settings>=2.9.1"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.2.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"
ignore = ["E402", "E722", "F401"]


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "DEBUG"
